--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja-JP">
+  <head>
+      <title>Hello Parcel</title>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
   <body>
-    <script src="./index.js"></script>
+    <div id="root"></div>
+    <script src="./index.tsx"></script>
   </body>
 </html>
